--- a/sections/3/von_neumann.tex
+++ b/sections/3/von_neumann.tex
@@ -2,6 +2,7 @@
 \graphicspath{{\subfix{../../images/}}}
 
 \begin{document}
+\label{3:sec:vonneumann}
 
 The von neumann architecture specifies a generic structure for CPUs and microprocessors to follow when they are designed. It dictates that the data used to store programs and the data used by the program (tempoary values, variables in memory) should co-exist in the same memory.
 
