--- a/sections/introduction/important_information.tex
+++ b/sections/introduction/important_information.tex
@@ -7,11 +7,11 @@
 \textit{This is mostly targeted to certain individuals who carelessly read this guide while cramming.}
 
 \enumerate
-
-\item The chapter and section markers \textbf{\textit{will not correspond to the textbook directly!}} Some of the content is deemed too trivial to write about; for those sections I urge you to use your textbook.
-
-\item 
-
+    \item The chapter and section markers \textbf{\textit{will not correspond to the textbook directly!}} Some of the content is deemed too trivial to write about; for those sections I urge you to use your textbook.
+    \item The subchapter order is also not identical to the textbook. It makes sense for some things to be in one chapter than the other, especially all the networking content.
+    \item I expect you to know that this \textbf{is a reference guide}. This is for you to \textbf{refer to.} refer to the table of contents if you need to find something specific. Please also use your own notes and the official to revise.
+    \item Please find simpler answers to your questions in the text itself, if I were to help you, I wouldn't be doing much other than paraphrasing the text.
+    \item If you have fedback, may as well e-mail me.
 \endenumerate
 
 \end{document}
