--- a/sections/introduction/whatisthisguide.tex
+++ b/sections/introduction/whatisthisguide.tex
@@ -14,7 +14,25 @@ This document is also prepared in \LaTeX, a high-quality typesetting system that
 
 \textbf{NOTE:} All references to "I", "Me", "Myself" and similar refer to the main author, Eason Qin.
 
-% TODO: write that appendix
-\textbf{For a quick tutorial as to how to use this guide, read [placeholder]} 
+\section*{Making the most of this guide}
+\addcontentsline{toc}{section}{Making the most of this guide}
+
+To use this guide effectively, I recommend you do the following:
+
+\begin{itemize}
+    \item Revisit your own notes to go over the links in your brain that \emph{you have made yourself}. This is actually very helpful.
+    \item Read the guide from cover to cover, or whichever section you wish. \emph{Think of this document as a very condensed set of notes, meant more for education, but still usable as a reference.}
+        \begin{itemize}
+            \item If it helps, use a highlighter! Shout-out to my friend Rhea Jain for doing this every time.
+            \item You can also make notes off this guide, although not recommended.
+            \item \textbf{Note that this guide may not be comprehensive. Do not rely on this as your ONLY form of revision.} There may be missed cracks and crevices, but it should be at least 98\% complete.
+        \end{itemize}
+    \item \textbf{Use the textbook!} It still is a great resource. Check the table of contents for what you must learn, and make sure you use it to reinforce your learning. Many sources that refer to the same thing improves the links in your brain too!
+        \begin{itemize}
+            \item You can also do some exercises from the book, if you wish. \textbf{Unfortunately, we are learning computer science in an academic context,} therefore, you must do things the academic way, like learning static, possibly outdated information, and sitting \textbf{exams.}
+            \item Unfortunately, this guide does not contain many images. Use the textbook for that!
+        \end{itemize}
+    \item When you need help when revising, consult the guide by checking the table of contents and jumping to the relevant page. If you still  need further assistance with the guide, you can choose to e-mail me. It is on the front cover of the document.
+\end{itemize}
 
 \end{document}
