--- a/main.tex
+++ b/main.tex
@@ -1,7 +1,6 @@
 \documentclass[a4paper, oneside, 11pt]{book} % we are not printing this like a book
 \usepackage[hmargin=2cm,vmargin=2.5cm,bindingoffset=0.5cm]{geometry}
 \usepackage[colorlinks=true]{hyperref}
-\usepackage{csquotes}
 \usepackage{bookmark}
 \usepackage{graphicx}
 \usepackage{subfiles}
@@ -15,6 +14,7 @@
 \usepackage{tabularx}
 \usepackage[table]{xcolor}
 \usepackage{array}
+\usepackage{csquotes}
 \setmonofont{Cascadia Code}
 
 \newfontfamily\ccbold{Cascadia Code Bold}
@@ -63,9 +63,9 @@
 \pagestyle{fancy}
 \setlength{\headheight}{15pt}
 \fancyhf{}
-\fancyhead[L]{\textbf{The IGCSE Computer Science Revision Guide}}
+\fancyhead[L]{\small \textbf{The IGCSE Computer Science Revision Guide}}
 \fancyhead[R]{\nouppercase{\leftmark}}
-\fancyfoot[C]{\thepage}
+\fancyfoot[C]{\small \thepage}
 
 \setlength{\arrayrulewidth}{0.3pt}
 \renewcommand{\arraystretch}{1.3}
@@ -93,13 +93,23 @@
 
 % info
 \title{The IGCSE Computer Science (Theory) Revision Guide}
-\author{Eason Qin (eason@ezntek.com), et al.}
-\date{February 2025}
+\author{\textbf{Eason Qin} (eason@ezntek.com), \textbf{Siddharth Harish} (sid.falcon9@gmail.com), \\and \textbf{Karthik Sankar} (karthik@hackclub.com)}
+\date{May 9th, 2025\\\emph{First Revision}}
 
 % da benin..beningi...benigi..da biningin™ 
 \begin{document}
 
 % Title Page
+
+\newgeometry{margin=0pt}
+\clearpage
+\thispagestyle{empty}
+\noindent
+\includegraphics[width=\paperwidth,height=\paperheight,keepaspectratio=false]{cover.png}
+\clearpage
+\restoregeometry
+
+% the inner title page
 \maketitle
 % TOC
 \label{table-of-contents}
