--- a/sections/2/usb.tex
+++ b/sections/2/usb.tex
@@ -3,7 +3,7 @@
 
 \begin{document}
 
-USB is a protocol and interface by which data is transmitted between computers and computer peripherals. it can be seen in many places, like between your computer and a mouse, a cable to connect your phone to the computer, USB microphones, audio devices, hubs, and other possible peripherals.
+USB is a protocol and interface by which data is transmitted between computers and computer peripherals. It can be seen in many places, like between your computer and a mouse, a cable to connect your phone to the computer, USB microphones, audio devices, hubs, and other possible peripherals.
 
 \subsection{USB-A}
 
