--- a/main.tex
+++ b/main.tex
@@ -94,7 +94,7 @@
 % info
 \title{The IGCSE Computer Science (Theory) Revision Guide}
 \author{\textbf{Eason Qin} (eason@ezntek.com), \textbf{Siddharth Harish} (sid.falcon9@gmail.com), \\and \textbf{Karthik Sankar} (karthik@hackclub.com)}
-\date{May 9th, 2025\\\emph{First Revision}}
+\date{May 10th, 2025\\\emph{Second Revision}}
 
 % da benin..beningi...benigi..da biningin™ 
 \begin{document}
