--- a/main.tex
+++ b/main.tex
@@ -65,7 +65,7 @@
 \fancyhf{}
 \fancyhead[L]{\small \textbf{The IGCSE Computer Science Revision Guide}}
 \fancyhead[R]{\nouppercase{\leftmark}}
-\fancyfoot[C]{\small \thepage}
+\fancyfoot[C]{\thepage}
 
 \setlength{\arrayrulewidth}{0.3pt}
 \renewcommand{\arraystretch}{1.3}
@@ -94,7 +94,7 @@
 % info
 \title{The IGCSE Computer Science (Theory) Revision Guide}
 \author{\textbf{Eason Qin} (eason@ezntek.com), \textbf{Siddharth Harish} (sid.falcon9@gmail.com), \\and \textbf{Karthik Sankar} (karthik@hackclub.com)}
-\date{May 10th, 2025\\\emph{Second Revision}}
+\date{May 11th, 2025\\\emph{Third Revision}}
 
 % da benin..beningi...benigi..da biningin™ 
 \begin{document}
