--- a/sections/1/applications_of_hexadecimal.tex
+++ b/sections/1/applications_of_hexadecimal.tex
@@ -23,11 +23,11 @@ OS error codes are given when a program has an error and must exit. Sometimes, t
 
 \paragraph{MAC addresses}
 
-These uniquely identifies a device on the network. They use 48 bits of data in total (6 segments of 2 nibbles), and look like {\ccmono AA:BB:CC:DD:EE:FF}. Refer to section \ref{2:sec:ip_and_mac_addresses} for details.
+These uniquely identifies a device on the network. They use 48 bits of data in total (6 segments of 2 nibbles), and look like {\ccmono AA:BB:CC:DD:EE:FF}. Refer to section \ref{2:sec:mac} for details.
 
 \paragraph{IPv6 addresses}
 
-Refer to \ref{2:sec:ip_and_mac_addresses} for details.
+Refer to \ref{2:sec:ipv6} for details.
 
 \paragraph{Color codes}
 
