--- a/sections/1/text_sound_and_images.tex
+++ b/sections/1/text_sound_and_images.tex
@@ -57,7 +57,7 @@ The first row of figure \ref{fig:sampling} demonstrates the difference between a
 \begin{figure}[H]
     \centering
     \includegraphics[width=0.5\textwidth]{sampling_zoomed.png}
-    \caption{A zommed in rendition of the sound wave.}
+    \caption{A zoomed in rendition of the sound wave.}
     \label{fig:sampling_zoomed}
 \end{figure}
 
