--- a/sections/5/the_internet_and_the_www.tex
+++ b/sections/5/the_internet_and_the_www.tex
@@ -11,7 +11,7 @@ Internets come from the words Interconnected Network; they are literally just co
 
 \begin{itemize}
     \item The internet that we know of is the largest collection of computers that are connected together. They consist of servers, which provide the websites and services, and they are all connected to each other in some way.
-    \item The internet is more of a concept that a tangible thing; the servers that you can touch are just computers. The connection between the servers is what the internet really is. However, \textbf{it still relies on a physical infrastructure}
+    \item The internet is more of a concept that a tangible thing; the servers that you can touch are just computers. The connection between the servers is what the internet really is. However, \textbf{it still relies on a tangible infrastructure.}
 \end{itemize}
 
 The World Wide Web (or WWW) is just a part of the internet that we can access. The world wide web consist of the things that sit on top of the internet, all the web pages and services like Google, YouTube, Discord, Reddit, Instagram, etc. are a part of the WWW. The WWW also provides extra protocols on top of the internet's protocols that relate to the content on the WWW, like how websites should be written, encryption, etc.
