--- a/sections/introduction/whatisthisguide.tex
+++ b/sections/introduction/whatisthisguide.tex
@@ -6,9 +6,9 @@
 
 You are looking at the final IGCSE Computer Science revision guide (also referred to as the CSRG), this time covering the whole syllabus for the IGCSE mock and final examinations. The first ever CSRG was for the Comp Sci G1 semester 2 examinations at OFS, and the second was for the Comp Sci G2 semester 1 examinations at OFS.
 
-This document aims to cover everything you need to know for the final IGCSE Computer Science 0478 examinations, for the 2023~2025 batch of IGCSE CS students. It aims to deliver the content in a concise yet informative form, short but with enough explanation to help develop an understanding for the content. If highlighting the guide helps you, you may do so.
+This document aims to cover everything you need to know for the final IGCSE Computer Science 0478 examinations, for the 2023\textasciitilde2025 batch of IGCSE CS students. It aims to deliver the content in a concise yet informative form, short but with enough explanation to help develop an understanding for the content. If highlighting the guide helps you, you may do so.
 
-This document is also prepared in \LaTeX, a high-quality typesetting system that is code-based. It is the de-facto standard for the communication and publication of scientific documents.\footnote{Taken from the \LaTeX website.}
+This document is also prepared in \LaTeX, a high-quality typesetting system that is code-based. It is the de-facto standard for the communication and publication of scientific documents.\footnote{Taken from the \LaTeX  website.}
 
 \textbf{This is revision one of the guide.}
 
