--- a/main.tex
+++ b/main.tex
@@ -94,7 +94,7 @@
 % info
 \title{The IGCSE Computer Science (Theory) Revision Guide}
 \author{\textbf{Eason Qin} (eason@ezntek.com), \textbf{Siddharth Harish} (sid.falcon9@gmail.com), \\and \textbf{Karthik Sankar} (karthik@hackclub.com)}
-\date{May 11th, 2025\\\emph{Third Revision}}
+\date{May 12th, 2025\\\emph{Fourth Revision}}
 
 % da benin..beningi...benigi..da biningin™ 
 \begin{document}
