--- a/sections/3/data_storage.tex
+++ b/sections/3/data_storage.tex
@@ -46,7 +46,7 @@ There are 2 main kinds of RAM, SRAM (S for static), and DRAM (D for dynamic).
 
 \subsubsection{Dynamic RAM}
 
-DRAM chips (the black squares that you see on the image) consist of transistors and capacitors. It is by far the most common type of RAM in all computers. The access time for DRAM is \textasciitilde60 milliseconds.
+DRAM chips (the black squares that you see on the image) consist of transistors and capacitors. It is by far the most common type of RAM in all computers. The access time for DRAM is \textasciitilde60 nanoseconds.
 
 They consist of:
 
@@ -75,7 +75,7 @@ Drawbacks of DRAM include:
 
 \subsubsection{Static RAM}
 
-SRAM chips are made of flip-flops that hold a constant one bit value. They do not need to be constantly refreshed, therefore. SRAM is used when speed is required, such as the CPU's cache. The access time is \textasciitilde25 milliseconds.
+SRAM chips are made of flip-flops that hold a constant one bit value. They do not need to be constantly refreshed, therefore. SRAM is used when speed is required, such as the CPU's cache. The access time is \textasciitilde25 nanoseconds.
 
 Benefits of SRAM include:
 
