fixed some typos
i fixed some typos!

--- a/sections/2/ip_and_mac_addresses.tex
+++ b/sections/2/ip_and_mac_addresses.tex
@@ -119,7 +119,7 @@ with 6 sets of 4 hex digits, totalling \textbf{128 bits.}
 \begin{itemize}
     \item They were created because there were not enough IPv4 addresses, and mapping subnets (sub-networks) became harder and harder.
     \item This type of IP address addresses the issue by providing plenty of combinations of addresses.
-    \item Some\footnote{disputed} claim taht it is more secure.
+    \item Some\footnote{disputed} claim that it is more secure.
     \item It is still not widely adopted, as of 2025.
 \end{itemize}
 
