--- a/sections/5/cybersecurity.tex
+++ b/sections/5/cybersecurity.tex
@@ -35,7 +35,7 @@ These are attempts at overloading a server such that it cannot function normally
 
 \subsection{Hacking}
 
-THis is an attack where a malicious person gains access to a computer system, without the user/server owner's permission/intention.
+This is an attack where a malicious person gains access to a computer system, without the user/server owner's permission/intention.
 \begin{itemize}
     \item This may lead to identity theft, collection of personal and classified information, or data corruption. 
     \item \textbf{Encrypting data does not actually defend against hacking}, it makes the data meaningless to the hacker, but they can still delete it.
