--- a/sections/introduction/whatisthisguide.tex
+++ b/sections/introduction/whatisthisguide.tex
@@ -10,7 +10,7 @@ This document aims to cover everything you need to know for the final IGCSE Comp
 
 This document is also prepared in \LaTeX, a high-quality typesetting system that is code-based. It is the de-facto standard for the communication and publication of scientific documents.\footnote{Taken from the \LaTeX  website.}
 
-\textbf{This is revision one of the guide.}
+\textbf{This is revision five of the guide.}
 
 \textbf{NOTE:} All references to "I", "Me", "Myself" and similar refer to the main author, Eason Qin.
 
